update: controller method
